--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL=postgres://cloudify2:cloudify@localhost:5432/projectmanager
+S3_URL=localhost:9000
 TIDE_SECRET=its_a_big_secret_now
 JWT_SECRET=oh_dear_jwt_secrets_go_here
