--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ async-trait = "*"
 sqlx = { version="*",  features = [ "postgres", "runtime-tokio-native-tls", "uuid"] } 
 serde = {version= "*"}
 serde_derive = "*"
+value-bag="*"
 serde_json = {version= "*"}
 serde-this-or-that = "*"
 uuid = {version="*", features = [
@@ -37,3 +38,4 @@ lazy_static="*"
 multer="*"
 reqwest="*"
 base64="*"
+minio-rsc="*"
